--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,18 @@
             <scope>provided</scope>
         </dependency>
 
+	    <dependency>
+	        <groupId>org.postgresql</groupId>
+	        <artifactId>postgresql</artifactId>
+	        <version>9.4.1209</version>
+	    </dependency>
+
+	    <dependency>
+	        <groupId>javax.persistence</groupId>
+	        <artifactId>persistence-api</artifactId>
+	        <version>1.0.2</version>
+	    </dependency>
+
     </dependencies>
 
     <build>
