--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,12 @@
             <version>${spring.version}</version>
         </dependency>
 
+	    <dependency>
+	        <groupId>org.springframework.data</groupId>
+	        <artifactId>spring-data-jpa</artifactId>
+	        <version>1.10.2.RELEASE</version>
+	    </dependency>
+
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>jstl</artifactId>
@@ -44,6 +50,7 @@
 	        <groupId>org.postgresql</groupId>
 	        <artifactId>postgresql</artifactId>
 	        <version>9.4.1209</version>
+		    <scope>provided</scope>
 	    </dependency>
 
 	    <dependency>
