--- a/src/main/resources/configuration/database.properties
+++ b/src/main/resources/configuration/database.properties
@@ -10,3 +10,9 @@ database.password=geheim123
 
 #Hibernate Configuration
 hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
+
+# this inserts a hibernate_sequence to database. without this you get no hibernate session
+hibernate.hbm2ddl.auto=update
+hibernate.ejb.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
+hibernate.show_sql=false
+hibernate.format_sql=true
