--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
       <spring.version>4.3.2.RELEASE</spring.version>
       <jstl.version>1.2</jstl.version>
       <servletapi.version>3.1.0</servletapi.version>
+	  <hibernate.version>5.1.0.Final</hibernate.version>
   </properties>
 
     <dependencies>
@@ -57,6 +58,18 @@
 	        <groupId>javax.persistence</groupId>
 	        <artifactId>persistence-api</artifactId>
 	        <version>1.0.2</version>
+	    </dependency>
+
+	    <dependency>
+	        <groupId>org.hibernate</groupId>
+	        <artifactId>hibernate-core</artifactId>
+	        <version>${hibernate.version}</version>
+	    </dependency>
+
+	    <dependency>
+	        <groupId>org.hibernate</groupId>
+	        <artifactId>hibernate-entitymanager</artifactId>
+	        <version>${hibernate.version}</version>
 	    </dependency>
 
     </dependencies>
