--- a/src/main/resources/configuration/database.properties
+++ b/src/main/resources/configuration/database.properties
@@ -11,8 +11,12 @@ database.password=geheim123
 #Hibernate Configuration
 hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
 
-# this inserts a hibernate_sequence to database. without this you get no hibernate session
-hibernate.hbm2ddl.auto=update
+# this inserts a hibernate_sequence to database.
+# also: without this you get failed hibernate session exception
+# because Failed to instantiate LocalContainerEntityManagerFactoryBean --> IllegalStateException: required key [hibernate.hbm2ddl.auto] not found
+# so on 1st app start you must use update to let hibernate create hibernate_sequence
+# on 2nd app start you can switch to validate
+hibernate.hbm2ddl.auto=validate
 hibernate.ejb.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
 hibernate.show_sql=false
 hibernate.format_sql=true
