--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,19 @@
 
     <dependencies>
 
+	    <!-- spring -->
+	    <dependency>
+	    	<groupId>org.springframework</groupId>
+	    	<artifactId>spring-core</artifactId>
+	    	<version>${spring.version}</version>
+	    	<exclusions>
+	    	  <exclusion>
+	    		<groupId>commons-logging</groupId>
+	    		<artifactId>commons-logging</artifactId>
+	    	  </exclusion>
+	    	</exclusions>
+	    </dependency>
+
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
@@ -70,6 +83,24 @@
 	        <groupId>org.hibernate</groupId>
 	        <artifactId>hibernate-entitymanager</artifactId>
 	        <version>${hibernate.version}</version>
+	    </dependency>
+
+
+	    <!--
+	        by default spring uses JCL = Jakarta Commons Logging
+	        Bridge logging from JCL to SLF4j
+	    -->
+	    <dependency>
+	        <groupId>org.slf4j</groupId>
+	        <artifactId>jcl-over-slf4j</artifactId>
+	        <version>1.7.21</version>
+	    </dependency>
+
+	    <!-- 3. logback -->
+	    <dependency>
+	    	<groupId>ch.qos.logback</groupId>
+	    	<artifactId>logback-classic</artifactId>
+	    	<version>1.1.7</version>
 	    </dependency>
 
     </dependencies>
